# avroparser

./: .gitignore  README.md  go.mod  json2csv.go  main.go  metrics2csv.go
raw-exporter/: README.md  analysis.ipynb  exporter.py  ftc-dedup-analysis.ipynb  pyproject.toml
scripts/: aws-cp.sh  process-input.sh
